[DOC-197] add close document (#66)